Fix lack of word wrapping

--- a/src/renderer/components/SelectedWellsCard/style.pcss
+++ b/src/renderer/components/SelectedWellsCard/style.pcss
@@ -3,6 +3,7 @@
 
   & .title {
     flex: 1;
+    white-space: normal;
   }
 
   & .title-buttons {
